--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "file-loader": "^6.2.0",
+    "jsstore": "^4.0.6",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
